# csv-local-ai-agent

./: .gitignore  README.md  TODO.md
.github/workflows/: main.yml
core/: Cargo.toml
core/examples/: pdf_check.rs
core/src/: audit.rs  lib.rs  mathexpr.rs  ollama.rs  orchestrator.rs  workspace.rs
core/src/tools/: excel.rs  math.rs  mod.rs  pdf.rs
core/tests/: engine.rs
github/: build-exe.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: app.js  index.html  styles.css
