[package]
name = "ledger-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Deterministic accounting engine + Ollama tool-calling orchestrator for Ledger Local"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
calamine = "0.24"
rust_xlsxwriter = "0.64"
pdf-extract = "0.7"
regex = "1.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "1"
# Ollama runs on plain HTTP on localhost, so no TLS stack is needed at all.
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }

[dev-dependencies]
tempfile = "=3.10.1"
